fix: Fixed an issue that would render the post form almost unusable on iOS.

--- a/app/assets/styles/control/input.css
+++ b/app/assets/styles/control/input.css
@@ -18,6 +18,7 @@
 
 .input-container textarea {
   height: 100%;
+  max-height: 100%;
   padding-top: 1rem;
 }
 
